# lab

./: CLAUDE.md
claude-enterprise-agents/: CLAUDE.md  package.json
claude-enterprise-agents/.claude/agents/: cicd.md  cyber.md  dev.md  test.md
claude-enterprise-agents/docs/: enterprise-agents-design.md  enterprise-agents-testplan.md
claude-enterprise-agents/mcp-servers/approval-gateway/: index.js  package.json
claude-enterprise-agents/scripts/: install.js
claude-enterprise-sdk/: __init__.py  __main__.py  approval.py  cli.py  config.py  pyproject.toml
claude-enterprise-sdk/agents/: __init__.py  base.py  cicd_agent.py  dev_agent.py  test_agent.py
claude-enterprise-sdk/agents/utilities/: __init__.py
claude-enterprise-sdk/claude_enterprise_sdk/: .env.example  __main__.py  requirements.txt
claude-enterprise-sdk/claude_enterprise_sdk/prompts/: system.py
claude-enterprise-sdk/design_principles/: __init__.py
claude-enterprise-sdk/docs/: ci-cd-agent.md  claude-enterprise-sdk-executive-readout.md
claude-enterprise-sdk/prompts/: tasks.py
claude-enterprise-sdk/shared_context/: store.py
claude_enterprise_sdk/: cli.py  pipeline.py  pyproject.toml
claude_enterprise_sdk/agents/: cicd_agent.py
claude_enterprise_sdk/docs/: claude-enterprise-sdk-technical-overview.md
claude_enterprise_sdk/integrations/: __init__.py  jenkins.py
claude_enterprise_sdk/reusable_components/: __init__.py
devai/: .env.example  .gitignore  __init__.py  approval.py  cli.py  config.py  pyproject.toml  requirements.txt
devai/agents/: base.py  cyber_agent.py
devai/agents/utilities/: audit.py
devai/design_principles/: __init__.py
devai/devai/: __main__.py  cli.py  pipeline.py
devai/devai/agents/: __init__.py  base.py  cyber_agent.py  dev_agent.py  test_agent.py
devai/devai/context/: __init__.py
devai/devai/hooks/: __init__.py  audit.py
devai/devai/prompts/: __init__.py
devai/docs/: ci-cd-agent.md  devai-executive-readout.md  devai-technical-overview.md
devai/integrations/: __init__.py  artifactory.py
devai/reusable_components/: __init__.py
selfimproving/: app_config.py  contract_reviewer.py  diff_panel.py  evaluator.py  feedback_collector.py  google_provider.py  main.py  metaprompt.txt  optimization_logger.py  optimizer.py  requirements.txt  tracing.py
selfimproving/data/: golden_dataset.csv  optimized_prompt.txt  reviews.csv
selfimproving/sample_contracts/: contract_1.txt  contract_2.txt  contract_3.txt
(+12 files in other folders)
