[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-enterprise-sdk"
version = "0.1.0"
description = "Claude Enterprise SDK - Multi-agent system for software development using Claude SDK"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
sdk = [
    "claude-code-sdk>=0.0.20",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
claude-enterprise-sdk = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["docs*", "devai.egg-info*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
